--- a/bitcoin-knots/alpine/Dockerfile
+++ b/bitcoin-knots/alpine/Dockerfile
@@ -1,7 +1,9 @@
 # common back image (allows ENV variable sharing)
 FROM alpine:3.21 AS base
 
-ENV BITCOIN_VERSION=27.1.knots20240801
+ARG BITCOIN_VERSION
+RUN test -n "$BITCOIN_VERSION" # make sure version is provided and not empty
+
 ENV BITCOIN_PREFIX=/opt/bitcoin-${BITCOIN_VERSION}
 
 # Build stage for Bitcoin Knots
@@ -25,22 +27,27 @@ RUN apk --no-cache add \
 
 ENV BITCOIN_SOURCE_DIR=/bitcoin/src \
     SIGS_REPO_URL="https://github.com/bitcoinknots/guix.sigs.git" \
-    SIGS_CLONE_DIR="guix.sigs" \
-    VERIFY_SCRIPT_URL="https://raw.githubusercontent.com/bitcoinknots/bitcoin/v${BITCOIN_VERSION}/contrib/verify-binaries/verify.py" \
-    ADDRESS="https://bitcoinknots.org/files/${BITCOIN_VERSION%%.*}.x/${BITCOIN_VERSION}"
+    SIGS_CLONE_DIR="guix.sigs"
 
 WORKDIR /bitcoin
-COPY ${BITCOIN_VERSION}/alpine/verify-${BITCOIN_VERSION%.*}.py .
+
+COPY bitcoin-knots/verify.py .
 
 RUN set -ex \
-  && echo "$BITCOIN_VERSION" \
+  && if echo $BITCOIN_VERSION | grep -q "rc" ; then \
+         export VERIFY_VERSION=$(echo $BITCOIN_VERSION | sed 's/\(.*\)rc\([0-9]*\)/\1-rc\2/'); \
+         export ADDRESS="https://bitcoinknots.org/files/${VERIFY_VERSION%%.*}.x/${BITCOIN_VERSION%%rc*}/test.rc${BITCOIN_VERSION##*rc}"; \
+       else \
+         export VERIFY_VERSION=$BITCOIN_VERSION; \
+         export ADDRESS="https://bitcoinknots.org/files/${VERIFY_VERSION%%.*}.x/${VERIFY_VERSION}"; \
+       fi \
+  && echo "$VERIFY_VERSION" \
   && wget ${ADDRESS}/bitcoin-${BITCOIN_VERSION}.tar.gz \
   && wget ${ADDRESS}/SHA256SUMS \
   && wget ${ADDRESS}/SHA256SUMS.asc \
   && git clone ${SIGS_REPO_URL} ${SIGS_CLONE_DIR} \
   && gpg --import "${SIGS_CLONE_DIR}"/builder-keys/* \
-  && ./verify-${BITCOIN_VERSION%.*}.py bin SHA256SUMS \
-    "bitcoin-${BITCOIN_VERSION}.tar.gz" \
+  && ./verify.py bin SHA256SUMS "bitcoin-${BITCOIN_VERSION}.tar.gz" \
   && mkdir -p ${BITCOIN_SOURCE_DIR} \
   && tar -xzf "bitcoin-${BITCOIN_VERSION}.tar.gz" -C ${BITCOIN_SOURCE_DIR} \
   && rm -rf ${SIGS_CLONE_DIR}
@@ -87,7 +94,8 @@ ENV BITCOIN_DATA=/bitcoin/.bitcoin \
     PATH=${BITCOIN_PREFIX}/bin:$PATH
 
 COPY --from=builder /opt /opt
-COPY ${BITCOIN_VERSION}/alpine/docker-entrypoint.sh /entrypoint.sh
+
+COPY bitcoin-knots/alpine/docker-entrypoint.sh /entrypoint.sh
 
 VOLUME ["/bitcoin/.bitcoin"]
 
@@ -95,6 +103,6 @@ EXPOSE 8332 8333 18332 18333 18443 18444 38333 38332
 
 ENTRYPOINT ["/entrypoint.sh"]
 
-RUN bitcoind -version | grep "Bitcoin Knots daemon version v${BITCOIN_VERSION}"
+RUN bitcoind -version | grep "Bitcoin Knots .*version v${BITCOIN_VERSION}"
 
 CMD ["bitcoind"]
