create separate docker compose configs for http/https hosting of the mining services. update bitcoin.conf. create new manage_node.sh script for managing start/stop of bitcoin node and/or mining pool services

--- a/bitcoin.conf
+++ b/bitcoin.conf
@@ -2,7 +2,9 @@
 # [rpc]
 # Accept command line and JSON-RPC commands.
 server=1
+# Bind to given address to listen for JSON-RPC connections. This option is ignored unless -rpcallowip is also passed. Port is optional and overrides -rpcport. Use [host]:port notation for IPv6. This option can be specified multiple times. (default: 127.0.0.1 and ::1 i.e., localhost)
 rpcbind=0.0.0.0
+rpcallowip=0.0.0.0/0
 # Listen for JSON-RPC connections on this port
 rpcport=8332
 # Username for JSON-RPC connections.
@@ -21,4 +23,4 @@ disablewallet=1
 # [zeromq]
 # Enable publishing of raw block hex to <address>.
 # Necessary for your pool to properly receive new block updates.
-zmqpubrawblock=0.0.0.0:3000
+zmqpubrawblock=tcp://*:3000
