--- a/compose_https.yml
+++ b/compose_https.yml
@@ -12,12 +12,21 @@ services:
       - "bitcoind-data:/bitcoin/.bitcoin"
       - "./bitcoin.conf:/bitcoin/.bitcoin/bitcoin.conf"
     command: [ "-conf=/bitcoin/.bitcoin/bitcoin.conf" ]
+    healthcheck:
+      test: [ "CMD", "bitcoin-cli", "-conf=/bitcoin/.bitcoin/bitcoin.conf", "getmininginfo" ]
+      interval: 30s
+      timeout: 10s
+      start_period: 60s
+      retries: 5
     profiles: [ "node", "pool" ]
 
   traefik:
     image: "traefik:latest"
     container_name: "traefik"
     restart: unless-stopped
+    depends_on:
+      bitcoind-node:
+        condition: service_healthy
     ports:
       - target: 80
         published: 80
@@ -46,6 +55,9 @@ services:
     container_name: public-pool
     image: ghcr.io/sethforprivacy/public-pool:latest
     restart: unless-stopped
+    depends_on:
+      bitcoind-node:
+        condition: service_healthy
     ports:
       - "3333:3333/tcp"
     volumes:
@@ -65,6 +77,9 @@ services:
     container_name: public-pool-ui
     image: ghcr.io/sethforprivacy/public-pool-ui:latest
     restart: unless-stopped
+    depends_on:
+      bitcoind-node:
+        condition: service_healthy
     environment:
       - DOMAIN=REPLACE_ME_DOMAIN
     labels:
@@ -79,6 +94,9 @@ services:
     image: containrrr/watchtower:latest
     container_name: watchtower
     restart: unless-stopped
+    depends_on:
+      bitcoind-node:
+        condition: service_healthy
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     profiles: [ "pool" ]
